[gd_scene load_steps=4 format=2]

[ext_resource path="res://Cat.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]

[node name="Main" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.792157, 0.686275, 1 )

[node name="Cat" parent="." instance=ExtResource( 1 )]

[node name="GameTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="Cat" to="." method="_on_Cat_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
